pom.xml update